task php and js

--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ nav,
 section {
   display: block;
 }
+a {
+  color: rgba(6, 184, 0, 0.788) !important;
+  text-decoration: none;
+}
 .photoshop-color {
   color: #2196f3;
 }
@@ -116,5 +120,141 @@ h2.title {
   margin: 1px;
 }
 .parser-colum {
-  display: block ruby;
+  display: flex;
+}
+.parser-colum:hover {
+  animation: animborder 1s;
+  animation-iteration-count: infinite;
+}
+.price-md {
+  margin-top: 16px;
+  margin-left: 10px;
+}
+.h4 {
+  color: chartreuse;
+}
+.my-work-1 {
+  width: 150px;
+}
+.grid-view-item-link:hover {
+  animation: animborder 1s;
+  animation-iteration-count: infinite;
+}
+@keyframes animborder {
+  0% {
+    border: 2px solid #ff0008;
+  }
+  5% {
+    border: 2px solid #ff3c00;
+  }
+  15% {
+    border: 2px solid #ffa600;
+  }
+  25% {
+    border: 2px solid #eeff00;
+  }
+  35% {
+    border: 2px solid #9dff00;
+  }
+  45% {
+    border: 2px solid #33ff00;
+  }
+  55% {
+    border: 2px solid #1eff00;
+  }
+  60% {
+    border: 2px solid #00ff95;
+  }
+  65% {
+    border: 2px solid #00eeff;
+  }
+  70% {
+    border: 2px solid #00aeff;
+  }
+  75% {
+    border: 2px solid #0044ff;
+  }
+  80% {
+    border: 2px solid #1900ff;
+  }
+  85% {
+    border: 2px solid #8400ff;
+  }
+  90% {
+    border: 2px solid #e100ff;
+  }
+  95% {
+    border: 2px solid #ff00f2;
+  }
+  100% {
+    border: 2px solid #ff0040;
+  }
+}
+.animation-social-btn:hover,
+.td-w25:hover,
+.td-w65:hover {
+  animation: popylarimageon 0.6s ease;
+  animation-iteration-count: 1;
+}
+.social-btn {
+  animation: popylarimageon 1s ease-in-out;
+  animation-iteration-count: 5;
+}
+@keyframes popylarimageon {
+  15% {
+    -webkit-transform: translateX(9px);
+    transform: translateX(9px);
+  }
+  30% {
+    -webkit-transform: translateX(-9px);
+    transform: translateX(-9px);
+  }
+  40% {
+    -webkit-transform: translateX(6px);
+    transform: translateX(6px);
+  }
+  50% {
+    -webkit-transform: translateX(-6px);
+    transform: translateX(-6px);
+  }
+  65% {
+    -webkit-transform: translateX(3px);
+    transform: translateX(3px);
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+}
+.animation-text-right {
+  animation-duration: 2s;
+  animation-name: slidein;
+}
+
+@keyframes slidein {
+  from {
+    margin-right: 100%;
+    width: 300%;
+  }
+
+  to {
+    margin-right: 0%;
+    width: 100%;
+  }
+}
+.animation-text-left {
+  animation-duration: 3s;
+  animation-name: slidein;
+}
+
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
 }
